<resources>
    <string name="app_name">Hangman</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_start">Start</string>
    <string name="tv_tittle">Hangman Game</string>
    <string name="tv_tittle_hangman">Hangman</string>


    <string name="init_word">_ _ _ _ _ _ _</string>
    <string name="new_game">New Game</string>
    <string name="you_win">You win</string>
    <string name="you_lose">You lose</string>
    <string name="game_is_ended">Game is ended. Start a new game!</string>
    <string name="word_to_find">Word to find was: #word#</string>
    <string name="try_an_other">Try an other letter</string>
    <string name="letter_already_entered">Letter already entered</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="x">X</string>
    <string name="w">W</string>
    <string name="v">V</string>
    <string name="u">U</string>
    <string name="t">T</string>
    <string name="s">S</string>
    <string name="r">R</string>
    <string name="q">Q</string>
    <string name="p">P</string>
    <string name="o">O</string>
    <string name="n">N</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="k">K</string>
    <string name="i">I</string>
    <string name="h">H</string>
    <string name="g">G</string>
    <string name="e">E</string>
    <string name="d">D</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="ñ">ñ</string>
    <string name="btn_restart">Restart</string>
    <string name="trick">Category:</string>
    <string name="f">F</string>
    <string name="j">J</string>
    <string name="img">img</string>
    <string name="tv_game_over">Game Over</string>
    <string name="play_again">Play Again</string>
    <string name="win">You Win !!!</string>
    <string name="restart">Restart</string>
    <string name="game_over">Game Over</string>
</resources>